--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,14 +54,35 @@ table {
 	border-spacing: 0;
 }
 
+/*Note:this is the end of the CSS reset, additional general styles included below*/
+
+body {
+	background: url('http://onedesigncompany.com/images/bg-blk.jpg');
+
+}
+
 /*HEADER*/
 
 .header {
 	border-bottom: 1px solid black;
 }
 
+header {
+	font-family: 'Denk One', sans-serif;
+	color:white;
+	padding-left: 10px;
+	padding-top: 10px;
+	font-size: 20px;
+
+}
+
 
 /*NAVBAR*/
+
+nav {
+	text-align: right;
+	padding-top: 0;
+}
 
 nav ul {
 	/*display: inline;*/
@@ -71,6 +92,10 @@ nav ul a {
 	color:#9e9e9e;
 	text-decoration: none;
 	font-family: helvetica;
+}
+
+nav ul a:hover {
+	color:#dddddd;
 }
 
 nav ul li {
