--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,6 +59,7 @@ table {
 
 body {
 	/*background: url('http://onedesigncompany.com/images/bg-blk.jpg');*/
+	background:url('site-background.jpg');
 }
 
 section {
@@ -132,18 +133,66 @@ nav ul li {
 .lessonsummary {
 	padding-bottom: 60px;
 	text-align: center;
-	border-bottom: 1px solid black;
+	border-bottom: 2px solid black;
 	margin-top: 30px;
 }
 
 .lessonsummary p {
 	font-family: 'Source Sans Pro', sans-serif;
-	font-size: 15px;
+	font-size: 22px;
 	font-weight: bold;
 }
 
 .question {
 	padding-top: 30px;
 }
+
+/*FAQ*/
+
+.faqdivs {
+	display: inline-block;
+	padding-top: 10px;
+	margin-top: 20px;
+	width: 33%;
+	padding-bottom: 10px;
+}
+
+.faqdivs h2 {
+	font-family: 'Source Sans Pro', sans-serif;
+	text-align: center;
+	font-weight: bold;
+	padding-bottom: 10px;
+}
+
+.faqdivs ul {
+	list-style-type: square;
+}
+
+.faqdivs p {
+	font-family: 'Source Sans Pro', sans-serif;
+	width:80%;
+	margin-left:32px;
+	text-align: justify;
+}
+
+.faqdivs ul li {
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.faqconstraint {
+	width: 80%;
+	margin-left: 20px;
+}
+
+.whycontinue {
+	border-right: 1px solid black;
+}
+
+.howlong {
+	border-right: 1px solid black;
+}
+
+
+
 
 
