--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,7 +65,7 @@ body {
 section {
 	width: 1024px;
 	margin: 0 auto;
-	padding-top: 20px;
+	padding-top: 60px;
 }
 
 /*HEADER*/
@@ -118,6 +118,11 @@ nav ul li {
 	width:120px;
 }
 
+.fixednav {
+	position: fixed;
+	width: 100%;
+}
+
 /*LESSON EXPLANATIONS*/
 
 .lessonexplain {
@@ -132,7 +137,7 @@ nav ul li {
 
 .lessonexplain h3 {
 	text-align: center;
-	margin-top:10px;
+	margin-top:20px;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
 }
@@ -219,6 +224,52 @@ nav ul li {
 .faq {
 	border-bottom: 2px solid black;
 	padding-bottom: 20px;
+}
+
+/*LESSON ONE*/
+
+.lesson1 {
+	height: 100%;
+	width:100%;
+}
+
+.lesson1 h2 {
+	background-color: rgba(186,218,85,0.8);
+	border-radius: 25px;
+	display: inline-block;
+	padding:7px;
+	border:1px solid black;
+	margin-top: 50px;
+	font-weight:bold;
+	font-size: 24px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.lesson1 h3 {
+	display: inline-block;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 20px;
+	padding-left: 7px;
+}
+
+.lesson1 p {
+	display:inline-block;
+	padding-left: 120px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.gitexplaindivs {
+	width:28%;
+	text-align: center;
+	background-color: rgba(0,0,0,0.3);
+	height:300px;
+	display: inline-block;
+}
+
+.gitexplaincontain {
+	margin-top: 30px;
+	text-align: center;
+	margin-bottom: 30px;
 }
 
 
