Moved navbar off the edge of the screen

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -91,6 +91,10 @@ header {
 	font-family: 'Source Sans Pro', sans-serif;
 }
 
+.header ul li:nth-child(5) {
+	margin-right:120px;
+}
+
 /*NAVBAR*/
 
 nav {
