--- a/stylesheet.css
+++ b/stylesheet.css
@@ -114,6 +114,10 @@ nav ul a {
 
 nav ul a:hover {
 	color:#dddddd;
+	-webkit-transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
+	transition: all 0.5s ease-in;
 }
 
 nav ul li {
