Added hover effect and border radius to lesson explanations

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,6 +141,11 @@ nav ul li {
 	background-color: rgba(0,0,0,0.3);
 	margin: 0 auto;
 	/*position: relative;*/
+	border-radius: 5px;
+}
+
+.lessonexplain:hover {
+	background-color:rgba(0,0,0,0.5);
 }
 
 .lessonexplain h3 {
