--- a/stylesheet.css
+++ b/stylesheet.css
@@ -291,6 +291,25 @@ nav ul li {
 }
 
 
+/*RESPONSIVE DESIGN*/
+
+@media screen and (max-width:1060px) {
+	
+	header {
+		text-align: center;
+		padding-top: 15px;
+	}
+
+	.header h3 {
+		display:none;
+	}
+
+	nav ul {
+		text-align: center;
+		margin-top: 30px;
+	}
+}
+
 
 
 
