--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,6 +146,10 @@ nav ul li {
 
 .lessonexplain:hover {
 	background-color:rgba(0,0,0,0.5);
+	-webkit-transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
+	transition: all 0.5s ease-in;
 }
 
 .lessonexplain h3 {
@@ -286,6 +290,10 @@ nav ul li {
 
 .gitexplaindivs:hover {
 	background-color: rgba(0,0,0,0.5);
+	-webkit-transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
+	transition: all 0.5s ease-in;
 }
 
 .gitexplaincontain {
