--- a/stylesheet.css
+++ b/stylesheet.css
@@ -291,6 +291,7 @@ nav ul li {
 
 .gitexplaindivs h3 {
 	margin-top: 20px;
+	padding-bottom: 15px;
 }
 
 .gitexplaindivs:hover {
@@ -301,12 +302,20 @@ nav ul li {
 	transition: all 0.5s ease-in;
 }
 
+.gitexplaindivs p {
+	text-align: center;
+	margin: 0 auto;
+	padding: 0;
+	width: 80%;
+}
+
 .gitexplaincontain {
 	margin-top: 30px;
 	text-align: center;
 	margin-bottom: 30px;
 }
 
+gitaha h
 
 /*RESPONSIVE DESIGN*/
 
