--- a/stylesheet.css
+++ b/stylesheet.css
@@ -360,7 +360,22 @@ nav ul li {
 	z-index: 0;
 }
 
+.lesson2 h3 {
+	display: inline-block;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 20px;
+	padding-left: 7px;
+}
 
+.lesson2 p {
+	display:inline-block;
+	padding-left: 120px;
+	font-family: 'Source Sans Pro', sans-serif;
+}
+
+.lesson2 .gitexplaindivs p {
+	padding-left: 0;
+}
 
 /*RESPONSIVE DESIGN*/
 
