Attempted to add a delay on the transition effects, does not appear to have worked

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -312,10 +312,10 @@ nav ul li {
 
 .gitexplaindivs:hover {
 	background-color: rgba(0,0,0,0.5);
-	-webkit-transition: all 0.5s ease-in;
-	-moz-transition: all 0.5s ease-in;
-	-o-transition: all 0.5s ease-in;
-	transition: all 0.5s ease-in;
+	-webkit-transition: all 0.5s ease-in 0.5s;
+	-moz-transition: all 0.5s ease-in 0.5s;
+	-o-transition: all 0.5s ease-in 0.5s;
+	transition: all 0.5s ease-in 0.5s;
 }
 
 .gitexplaindivs p {
