--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,7 +105,7 @@ header {
 	margin-right:120px;
 }
 
-.gitlogo {
+/*.gitlogo {
 	height: 60px;
 	width: 80px;
 	position: relative;
@@ -120,7 +120,7 @@ header {
 	height: 60px;
 	width: 80px;
 	z-index: 100;
-}
+}*/
 
 /*NAVBAR*/
 
