--- a/stylesheet.css
+++ b/stylesheet.css
@@ -473,6 +473,24 @@ nav ul li {
 	padding-bottom: 40px;
 }
 
+.shellexplaindiv2 {
+	width:30% !important;
+	/*background-color: rgba(0,0,0,0.7);*/
+	color:#dddddd;
+	font-family: courier;
+	/*font-size: 14px;*/
+	height:200px;
+	text-align: left;
+	margin-left: 20px;
+}
+
+.shellexplaindiv2 h3 {
+	/*padding-bottom:;*/
+	display: inline-block;
+	padding-left: 5px;
+	font-size: 14px;
+}
+
 /*RESPONSIVE DESIGN*/
 
 @media screen and (max-width:1060px) {
