--- a/stylesheet.css
+++ b/stylesheet.css
@@ -474,21 +474,21 @@ nav ul li {
 }
 
 .shellexplaindiv2 {
-	width:30% !important;
+	width:50% !important;
 	/*background-color: rgba(0,0,0,0.7);*/
 	color:#dddddd;
 	font-family: courier;
 	/*font-size: 14px;*/
 	height:200px;
 	text-align: left;
-	margin-left: 20px;
-	margin-top: -180px;
+	/*margin-left: 20px;*/
+	margin: 15px auto;
 }
 
 .shellexplaindiv2 h3 {
 	/*padding-bottom:;*/
 	display: inline-block;
-	padding-left: 5px;
+	padding-left: 10px;
 	font-size: 14px;
 }
 
