--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,6 +84,7 @@ strong {
 .header {
  	background:url('binding_dark.png');
 	z-index: 9;
+	width:1024px;
 }
 
 header {
@@ -159,6 +160,12 @@ nav ul li {
 .fixednav {
 	position: fixed;
 	width: 100%;
+	background:url('binding_dark.png');
+}
+
+.navparameter {
+	width:1024px;
+	margin:0 auto;
 }
 
 /*LESSON EXPLANATIONS*/
