--- a/stylesheet.css
+++ b/stylesheet.css
@@ -85,7 +85,7 @@ strong {
  	background:url('binding_dark.png');
 	z-index: 9;
 	width:1100px;
-	margin:0 auto;
+	margin: 0 auto;
 }
 
 header {
@@ -144,7 +144,7 @@ nav ul a {
 }
 
 nav ul a:hover {
-	color:#cccccc;
+	color:#dddddd;
 	-webkit-transition: all 0.5s ease-in;
 	-moz-transition: all 0.5s ease-in;
 	-o-transition: all 0.5s ease-in;
@@ -176,14 +176,14 @@ nav ul li {
 	width:15%;
 	/*border:1px solid red;*/
 	display: inline-block;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.3);
 	margin: 0 auto;
 	/*position: relative;*/
 	border-radius: 5px;
 }
 
 .lessonexplain:hover {
-	background-color:rgba(0,0,0,0.6);
+	background-color:rgba(0,0,0,0.5);
 	-webkit-transition: all 0.5s ease-in;
 	-moz-transition: all 0.5s ease-in;
 	-o-transition: all 0.5s ease-in;
@@ -195,7 +195,6 @@ nav ul li {
 	margin-top:20px;
 	font-family: 'Source Sans Pro', sans-serif;
 	font-weight: bold;
-	color:#dddddd;
 }
 
 .lessonsummary .lessonexplain p {
@@ -204,7 +203,6 @@ nav ul li {
 	margin-top: 20px;
 	width:85%;
 	margin-left: 10px;
-	color:#dddddd;
 }
 
 .lessonsummary {
@@ -226,12 +224,11 @@ nav ul li {
 
 .l3 a {
 	text-decoration: none;
-	/*color:black;*/
-	color:#dddddd;
+	color:black;
 }
 
 .l3 a:hover {
-	color:#bbbbbb;
+	color:#dddddd;
 	-webkit-transition: all 0.5s ease-in 0.5s;
 	-moz-transition: all 0.5s ease-in 0.5s;
 	-o-transition: all 0.5s ease-in 0.5s;
@@ -337,7 +334,7 @@ nav ul li {
 .gitexplaindivs {
 	width:28%;
 	text-align: center;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.3);
 	height:450px;
 	display: inline-block;
 	border-radius: 5px;
@@ -345,14 +342,12 @@ nav ul li {
 
 .gitexplaindivs a {
 	text-decoration: none;
-	/*color:black;*/
-	color:#dddddd;
+	color:black;
 	font-weight: bold;
 }
 
 .gitexplaindivs a:hover {
-	/*color:#dddddd;*/
-	color:#bbbbbb;
+	color:#dddddd;
 	/*transition: all 0.5s ease-in;*/
 }
 
@@ -362,7 +357,7 @@ nav ul li {
 }
 
 .gitexplaindivs:hover {
-	background-color: rgba(0,0,0,0.6);
+	background-color: rgba(0,0,0,0.5);
 	-webkit-transition: all 0.5s ease-in 0.5s;
 	-moz-transition: all 0.5s ease-in 0.5s;
 	-o-transition: all 0.5s ease-in 0.5s;
@@ -441,7 +436,7 @@ nav ul li {
 .shellexplaindivs {
 	/*width:48%;*/
 	text-align: center;
-	background-color: rgba(0,0,0,0.4);
+	background-color: rgba(0,0,0,0.3);
 	height:250px;
 	display: inline-block;
 	border-radius: 5px;
@@ -449,13 +444,12 @@ nav ul li {
 
 .shellexplaindivs a {
 	text-decoration: none;
-	/*color:black;*/
-	color:#dddddd;
+	color:black;
 	font-weight: bold;
 }
 
 .shellexplaindivs a:hover {
-	color:#bbbbbb;
+	color:#dddddd;
 	-webkit-transition: all 0.5s ease-in 0.5s;
 	-moz-transition: all 0.5s ease-in 0.5s;
 	-o-transition: all 0.5s ease-in 0.5s;
@@ -481,7 +475,6 @@ nav ul li {
 	padding: 0;
 	width: 80%;
 	padding-bottom: 20px;
-	color:#dddddd;
 }
 
 .shellextrapadding {
@@ -505,7 +498,6 @@ nav ul li {
 	display: inline-block;
 	padding-left: 10px;
 	font-size: 14px;
-	color:#dddddd;
 }
 
 /*.shellexplaindiv2 .p1shell {
