--- a/stylesheet.css
+++ b/stylesheet.css
@@ -505,7 +505,8 @@ nav ul li {
 	/*padding-bottom:;*/
 	display: inline-block;
 	padding-left: 10px;
-	font-size: 14px;
+	font-size: 10px;
+	margin-top: 5px;
 }
 
 /*.shellexplaindiv2 .p1shell {
@@ -523,7 +524,7 @@ nav ul li {
 }*/
 
 .shellexplindiv2 .p1shell, .shellexplaindiv2 .p2shell {
-	display: none;
+	/*display: none;*/
 }
 
 /*RESPONSIVE DESIGN*/
