--- a/stylesheet.css
+++ b/stylesheet.css
@@ -443,11 +443,11 @@ nav ul li {
 }
 
 .terminalex {
-	background-color: rgba(0,0,0,0.7) !important;
+	background-color: rgba(0,0,0,0.8) !important;
 }
 
 .terminalex:hover {
-	background-color: rgba(0,0,0,0.7) !important;
+	background-color: rgba(0,0,0,0.8) !important;
 }
 
 .shellexplaindivs a {
@@ -498,7 +498,11 @@ nav ul li {
 	height:200px;
 	text-align: left;
 	/*margin-left: 20px;*/
-	margin: 15px auto;
+	margin: 15px 0;
+	display: inline-block;
+	position:relative;
+	top:5px;
+	left:0;
 }
 
 .shellexplaindiv2 h3 {
@@ -508,6 +512,20 @@ nav ul li {
 	font-size: 11px;
 	margin-top: 5px;
 	color:#008500;
+}
+
+.shellexplaincontainer {
+	width: 100%;
+	height:300px;
+	text-align: left;
+}
+
+.shellexplaincontainer p {
+	text-align: left;
+	margin-left: 5px;
+	margin-bottom: -10px;
+	padding-top: 10px;
+	/*display: inline-block;*/
 }
 
 /*.shellexplaindiv2 .p1shell {
@@ -523,6 +541,24 @@ nav ul li {
 	top:24px;
 	margin-top: -40px;
 }*/
+
+.cmdlist {
+	height:200px;
+	width:40%;
+	background-color: rgba(0,0,0,0.4);
+	border-radius: 5px;
+	display: inline-block;
+	position: relative;
+	right:-100px;
+	margin-top: 15px;
+}
+
+.cmdlist h3 {
+	font-size: 18px;
+	width: 80%;
+	text-align: center;
+	margin:0 auto;
+}
 
 /*RESPONSIVE DESIGN*/
 
