--- a/stylesheet.css
+++ b/stylesheet.css
@@ -501,7 +501,7 @@ nav ul li {
 	margin: 15px 0;
 	display: inline-block;
 	position:relative;
-	top:5px;
+	top:-85px;
 	left:0;
 }
 
@@ -512,6 +512,14 @@ nav ul li {
 	font-size: 11px;
 	margin-top: 5px;
 	color:#008500;
+}
+
+.shellexplaindiv2 p {
+	font-family:courier;
+	color:#008500;
+	font-size: 12px;
+	padding-left: 5px;
+	margin-top: -20px;
 }
 
 .shellexplaincontainer {
@@ -550,14 +558,23 @@ nav ul li {
 	display: inline-block;
 	position: relative;
 	right:-100px;
+	top:30px;
 	margin-top: 15px;
 }
 
 .cmdlist h3 {
 	font-size: 18px;
-	width: 80%;
+	width: 70%;
 	text-align: center;
 	margin:0 auto;
+	font-weight: bold;
+}
+
+.cmdlist p {
+	font-size: 14px;
+	width:85%;
+	padding-bottom: 10px;
+
 }
 
 /*RESPONSIVE DESIGN*/
