--- a/stylesheet.css
+++ b/stylesheet.css
@@ -501,7 +501,7 @@ nav ul li {
 	margin: 15px 0;
 	display: inline-block;
 	position:relative;
-	top:-85px;
+	top:-125px;
 	left:0;
 }
 
@@ -574,8 +574,11 @@ nav ul li {
 	font-size: 14px;
 	width:85%;
 	padding-bottom: 10px;
-
+	margin: 0 auto;
+	padding-left: 10px;
 }
+
+
 
 /*RESPONSIVE DESIGN*/
 
