Added back to top fixed button in bottom right corner

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -169,6 +169,11 @@ nav ul li {
 	margin:0 auto;
 }
 
+.toplink {
+	float:right;
+	clear:both;
+}
+
 /*LESSON EXPLANATIONS*/
 
 .lessonexplain {
@@ -578,6 +583,25 @@ nav ul li {
 	padding-left: 10px;
 }
 
+
+/*FOOTER*/
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	right:20px;
+	/*color:white;*/
+	background-color: rgba(0,0,0,0.7);
+	border:1px solid white;
+	padding: 7px 7px 0 7px;
+	/*font-family: sans-serif;*/
+}
+
+.footer a {
+	color: white;
+	font-family: sans-serif;
+	font-size: 14px;
+}
 
 
 /*RESPONSIVE DESIGN*/
