--- a/stylesheet.css
+++ b/stylesheet.css
@@ -630,10 +630,10 @@ nav ul li {
 }
 
 .onlineexplaindivs {
-	width:28%;
-	text-align: center;
+	width:60%;
+	text-align: left;
 	background-color: rgba(0,0,0,0.3);
-	height:450px;
+	height:300px;
 	display: inline-block;
 	border-radius: 5px;
 }
@@ -668,12 +668,38 @@ nav ul li {
 	padding: 0;
 	width: 80%;
 	padding-bottom: 20px;
+	display: inline-block;
 }
 
 .onlinerepocontain {
 	margin-top: 30px;
-	text-align: center;
+	text-align: left;
 	margin-bottom: 35px;
+}
+
+.downloads {
+	display: inline-block;
+	background-color: rgba(0,0,0,0.4);
+	height: 300px;
+	width:32%;
+	position: relative;
+	top: 0;
+	right:0;
+	border-radius: 5px;
+}
+
+.downloads a {
+	color:#dddddd;
+	text-decoration: none;
+	border:1px solid #2c3747;
+	border-radius: 5px;
+	background-color: #2c3747;
+	padding:5px;
+	margin: 0 auto;
+}
+
+.downloads a:hover {
+	color:#9e9e9e;
 }
 
 /*FOOTER*/
