--- a/stylesheet.css
+++ b/stylesheet.css
@@ -695,11 +695,18 @@ nav ul li {
 	border-radius: 5px;
 	background-color: #2c3747;
 	padding:5px;
-	margin: 0 auto;
+	/*margin: 0 auto;*/
+	position: relative;
+	top:30px;
+	left:110px;
 }
 
 .downloads a:hover {
 	color:#9e9e9e;
+}
+
+.downloads p {
+	margin-top: 35px;
 }
 
 /*FOOTER*/
