Added Formatting on the lesson 3 numbering

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -714,20 +714,34 @@ nav ul li {
 }
 
 .tutorialimg {
-	margin-top: 20px;
+	/*margin-top: 20px;*/
+	margin:20px auto 0 auto;
+}
+
+.tutorialimg h3 {
+	/*font-family:sans-serif;*/
+	border:1px solid black;
+	margin-top: 0;
+	padding-top: 0;
+	padding:3px !important;
+	border-radius:100px;
+	background-color: rgba(0,0,0,0.3);
+	color:#bbbbbb;
 }
 
 .tutorialimg .signupimg {
-	width:200px;
-	margin-right: 10px;
+	width:220px;
+	margin-right: 20px;
+	margin-left: 10px;
 }
 
 .tutorialimg .newrepobutton {
-	margin-right: 10px;
+	margin-right: 20px;
+	width:275px;
 }
 
 .tutorialimg .namerepositoryimg {
-	width:200px;
+	width:400px;
 }
 
 .tutorialimg h3 {
