--- a/stylesheet.css
+++ b/stylesheet.css
@@ -757,7 +757,7 @@ nav ul li {
 	right:20px;
 	/*color:white;*/
 	background-color: rgba(0,0,0,0.7);
-	border:1px solid white;
+`	border:1px solid white;
 	padding: 7px 7px 0 7px;
 	/*font-family: sans-serif;*/
 	border-radius: 5px;
@@ -768,7 +768,6 @@ nav ul li {
 	font-size: 13px;
 	font-family: sans-serif;
 }
-
 
 /*RESPONSIVE DESIGN*/
 
