--- a/stylesheet.css
+++ b/stylesheet.css
@@ -916,6 +916,89 @@ nav ul {
 	margin-bottom: 35px;
 }
 
+/*LESSON 6*/
+
+.lesson6 {
+	height: 100%;
+	width:100%;
+	position: absolute;
+	top:600%;
+	left:0%;
+	z-index: -5;
+}
+
+.lesson6 h2 {
+	background-color: rgba(186,218,85,0.8);
+	border-radius: 25px;
+	/*display: inline-block;*/
+	padding:7px;
+	border:1px solid black;
+	/*margin-top: 50px;*/
+	font-weight:bold;
+	font-size: 24px;
+	font-family: 'Source Sans Pro', sans-serif;
+	margin-top: 50px;
+	/*margin:0 auto;*/
+	/*margin-left: 10%;*/
+	position: relative;
+	z-index: 0;
+	text-align: center;
+}
+
+.lesson6 h3 {
+	/*display: inline-block;*/
+	font-family: 'Source Sans Pro', sans-serif;
+	font-size: 20px;
+	/*padding-left: 7px;*/
+	text-align: center;
+	padding-top: 15px;
+	margin-top: 22px;
+}
+
+.lesson6 p {
+	/*display:inline-block;*/
+	/*padding-left: 120px;*/
+	text-align: center;
+	font-family: 'Source Sans Pro', sans-serif;
+	padding-top: 10px;
+}
+
+.gitpushdivs {
+	width:60%;
+	text-align: left;
+	background-color: rgba(0,0,0,0.3);
+	height:250px;
+	display: inline-block;
+	border-radius: 5px;
+}
+
+.gitpushdivs a {
+	text-decoration: none;
+	color:black;
+	font-weight: bold;
+}
+
+.gitpushdivs h3 {
+	margin-top: 20px;
+	padding-bottom: 15px;
+}
+
+.gitpushdivs p {
+	text-align: center;
+	margin: 0 auto;
+	padding: 0;
+	width: 80%;
+	padding-bottom: 20px;
+	display: inline-block;
+	margin-left: 60px;
+}
+
+.gitpushcontain {
+	margin-top: 30px;
+	text-align: left;
+	margin-bottom: 35px;
+}
+
 /*FOOTER*/
 
 .footer {
