--- a/stylesheet.css
+++ b/stylesheet.css
@@ -185,6 +185,29 @@ nav ul {
 	text-align: center;
 }
 
+.back-to-top {
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	line-height: 50px;
+	background-color: rgba(0, 0, 0, .25);
+	position: fixed;
+	right: -4px;
+	top: 25%;
+	border-radius: 4px;
+	color: #F5F5F5;
+	z-index: 999;
+	float:right;
+	padding-bottom: 10px;
+}
+
+.back-to-top a {
+	text-decoration: none;
+	font-family: sans-serif;
+	color: white;
+}
+
+
 /*LESSON EXPLANATIONS*/
 
 .lessonexplain {
@@ -1001,28 +1024,9 @@ nav ul {
 
 /*FOOTER*/
 
-.footer {
-	position: fixed;
-	bottom: 0;
-	right:20px;
-	/*color:white;*/
-	background-color: rgba(0,0,0,0.7);
-	border:1px solid white;
-	padding: 7px 7px 0 7px;
-	/*font-family: sans-serif;*/
-	border-radius: 5px;
-}
-
-.footer a {
-	color:white;
-	font-size: 13px;
-	font-family: sans-serif;
-}
-
-/*LESSON 4*/
-
 
 /*RESPONSIVE DESIGN*/
+
 
 
 
